--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = ixapipes
-version = 0.0.1
+version = 0.0.4
 author = Iker García Ferrero
 author_email = iker.garciaf@ehu.eus
 description = Python bindings for Ixa Pipes
@@ -11,8 +11,8 @@ project_urls =
     Bug Tracker = https://github.com/ikergarcia1996/Python-IXA-Pipes/issues
 classifiers =
     Programming Language :: Python :: 3
-    License :: OSI Approved :: ApacheLicense :: 2.0
-    Operating System :: Linux
+    License :: OSI Approved :: Apache Software License
+    Operating System :: POSIX :: Linux
 
 [options]
 packages = find:
